Adding lcd Display and add second sensor

--- a/SRC/Native/BoilerNative/platformio.ini
+++ b/SRC/Native/BoilerNative/platformio.ini
@@ -15,4 +15,6 @@ framework = espidf
 upload_protocol = esptool
 debug_tool = esp-builtin
 
-lib_deps = https://github.com/jamieparkinson/ESP32-MAX31865.git
+lib_deps =
+ https://github.com/MountaineerGit/ESP32-MAX31865.git
+ https://github.com/MountaineerGit/HD44780-ESP-IDF-CPP.git
