--- a/SRC/Native/BoilerNative/platformio.ini
+++ b/SRC/Native/BoilerNative/platformio.ini
@@ -14,7 +14,16 @@ board = seeed_xiao_esp32c3
 framework = espidf
 upload_protocol = esptool
 debug_tool = esp-builtin
+build_type = debug
+
+build_flags =
+       -DOWNG_NO_NATIVE_CONFIG
+       -DCONFIG_PWR_CTRL_ENABLED
+       -DCONFIG_OVERDRIVE_ENABLED
+       -DCONFIG_CRC16_ENABLED
+       -DCONFIG_ITERATION_RETRIES=1
 
 lib_deps =
  https://github.com/MountaineerGit/ESP32-MAX31865.git
  https://github.com/MountaineerGit/HD44780-ESP-IDF-CPP.git
+ https://github.com/pstolarz/OneWireNg.git
